--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/Detail.cshtml
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/Detail.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Detail";
 }
 
+@if(Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
+
 <h1>@Model.Restaurant.Name</h1>
 <p>
     Id: @Model.Restaurant.Id
