plsight-allen/DotnetCoreFundamentals: use @RenderSection to extend sections from other views

--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/List.cshtml
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/List.cshtml
@@ -44,5 +44,6 @@
 
 <a asp-page=".\Edit" class="btn btn-primary">Add New</a>
 
-<p>@Model.Message</p>
-
+@section footer {
+    <p>@Model.Message</p>
+}
