--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/List.cshtml
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/List.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model DotnetCoreFundamentals.Pages.Restaurants.ListModel
 @{
+    ViewData["Title"] = "Restaurants";
 }
 
 <h1>Restaurants</h1>
