--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/_ViewImports.cshtml
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using DotnetCoreFundamentals
 @namespace DotnetCoreFundamentals.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DotnetCoreFundamentals
