--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/ClientRestaurants.cshtml
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/Pages/Restaurants/ClientRestaurants.cshtml
@@ -6,25 +6,31 @@
 
 <h1>ClientRestaurants</h1>
 
+<table class="table" id="restaurants">
+</table>
+
 
 @section Scripts {
-    <environment include="Development">
-        <script src="~\node_modules\datatables.net\js\jquery.dataTables.js"></script>
-        <script src="~\node_modules\datatables.net-bs\js\dataTables.bootstrap.js"></script>
-        <link href="~\node_modules\datatables.net-bs\css\dataTables.bootstrap.css" rel="stylesheet" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.20/datatables.min.css" />
-        <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.20/datatables.min.js"></script>
-    </environment>
+    <script src="~/node_modules/datatables.net/js/jquery.dataTables.js"></script>
+    <script src="~/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.js"></script>
+    <link href="~/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet" />
     <script>
         $(function () {
+            const cuisines = ["Unknown", "Mexican", "Italian", "Indian"];
+
             $.ajax(
                 "/api/Restaurants/",
                 { method: "get" }
             )
             .then(res => {
-                console.log(res);
+                $("#restaurants").dataTable({
+                    data: res,
+                    columns: [
+                        { "data": "name" },
+                        { "data": "location" },
+                        { "data": "cuisine", "render": data => cuisines[data] },
+                    ],
+                });
             })
         })
     </script>
