rosas/travel: Add login stack nav. Add basic tab nav.

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
@@ -1,8 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="TravelRecord.MainPage">
-    <StackLayout VerticalOptions="Center">
-        <Entry/>
-        <Entry/>
-        <Button x:Name="LoginButton" Text="Log in" Pressed="LoginButton_Pressed" />
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="TravelRecord.MainPage">
+    <StackLayout
+        VerticalOptions="Center"
+        Margin="20, 0">
+        <Entry
+            x:Name="emailEntry"
+            Placeholder="Email address"
+            Keyboard="Email"/>
+        <Entry
+            x:Name="passwordEntry"
+            Placeholder="Password"
+            IsPassword="True"/>
+        <Button
+            Margin="0, 50, 0, 0"
+            x:Name="LoginButton"
+            Text="Log in"
+            Pressed="LoginButton_Pressed"
+            BackgroundColor="BlueViolet"
+            TextColor="White"/>
     </StackLayout>
 </ContentPage>
