--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
@@ -3,6 +3,10 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:TravelRecord"
             x:Class="TravelRecord.HomePage">
+    <TabbedPage.ToolbarItems>
+        <ToolbarItem Text="Add"
+                     Clicked="AddItem_Clicked"/>
+    </TabbedPage.ToolbarItems>
     <local:HistoryPage Title="History"/>
     <local:MapPage Title="Map"/>
     <local:ProfilePage Title="Profile"/>
