--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/App.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/App.xaml
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="TravelRecord.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="blueColor">#1E90FF</Color>
+            <Color x:Key="whiteColor">#FFF</Color>
+
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource blueColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource whiteColor}"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
