--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/App.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/App.xaml
@@ -5,7 +5,7 @@
             <Color x:Key="blueColor">#1E90FF</Color>
             <Color x:Key="whiteColor">#FFF</Color>
 
-            <Style TargetType="Button">
+            <Style x:Key="normalButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="{StaticResource blueColor}"/>
                 <Setter Property="TextColor" Value="{StaticResource whiteColor}"/>
             </Style>
