--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.NewTravelPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
+    </ContentPage.ToolbarItems>
+
     <StackLayout>
-        <Label Text="Welcome to the travel page"/>
+        <Entry x:Name="experienceEntry" Placeholder="Write your experience" />
     </StackLayout>
 </ContentPage>
