rosas/travel: Read from SQLite and display list items

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.HistoryPage">
-    <StackLayout>
-        <Label Text="Welcome to the history page"/>
-    </StackLayout>
+    <ListView x:Name="postListView">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding Experience}" />
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
