--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.HistoryPage">
-    <ListView x:Name="postListView">
+    <ListView x:Name="postListView" ItemSelected="OnItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <TextCell Text="{Binding Experience}" />
