--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
@@ -7,6 +7,35 @@
     </ContentPage.ToolbarItems>
 
     <StackLayout>
-        <Entry x:Name="experienceEntry" Placeholder="Write your experience" />
+        <Entry x:Name="experienceEntry"
+               Placeholder="Write your experience" />
+        <ListView x:Name="venueListView"
+                  HorizontalOptions="FillAndExpand"
+                  Margin="20, 0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Label Text="{Binding name}"
+                                   FontAttributes="Bold"/>
+                            <Label Grid.Row="1"
+                                   Text="{Binding location.address}"
+                                   TextColor="DodgerBlue"/>
+                            <Label Grid.Column="1"
+                                   Text="{Binding location.distance, StringFormat='{0} meters'}"/>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackLayout>
 </ContentPage>
