--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
@@ -5,6 +5,10 @@
     <StackLayout
         VerticalOptions="Center"
         Margin="20, 0">
+        <Image x:Name="iconImage"
+               Aspect="AspectFit"
+               HeightRequest="100"
+               Margin="0, 0, 0, 50"/>
         <Entry
             x:Name="emailEntry"
             Placeholder="Email address"
