rosas/travel: add platform specific images

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
@@ -5,9 +5,13 @@
             x:Class="TravelRecord.HomePage">
     <TabbedPage.ToolbarItems>
         <ToolbarItem Text="Add"
+                     IconImageSource="add.png"
                      Clicked="AddItem_Clicked"/>
     </TabbedPage.ToolbarItems>
-    <local:HistoryPage Title="History"/>
-    <local:MapPage Title="Map"/>
-    <local:ProfilePage Title="Profile"/>
+    <local:HistoryPage Title="History"
+                       IconImageSource="home.png"/>
+    <local:MapPage Title="Map"
+                   IconImageSource="map.png"/>
+    <local:ProfilePage Title="Profile"
+                       IconImageSource="user.png"/>
 </TabbedPage>
