--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/NewTravelPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.NewTravelPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
+        <ToolbarItem Text="Save"
+                     IconImageSource="save.png"
+                     Clicked="Save_Clicked" />
     </ContentPage.ToolbarItems>
 
     <StackLayout>
