--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/ProfilePage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/ProfilePage.xaml
@@ -2,7 +2,22 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelRecord.ProfilePage">
-    <StackLayout>
-        <Label Text="Welcome to the profile page"/>
+    <StackLayout Margin="20,40,20,0">
+        <Label x:Name="postCountLabel"
+               Text="--"
+               HorizontalOptions="Center"
+               TextColor="DodgerBlue"
+               FontAttributes="Bold"/>
+        <Label Text="posts"
+               HorizontalOptions="Center"
+               TextColor="LightGray"/>
+    <ListView x:Name="categoriesListView">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
     </StackLayout>
 </ContentPage>
