--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/ProfilePage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/ProfilePage.xaml
@@ -14,8 +14,7 @@
     <ListView x:Name="categoriesListView">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <ViewCell>
-                </ViewCell>
+                <TextCell Text="{Binding Path=Key}" Detail="{Binding Path=Value}"/>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
