--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HomePage.xaml
@@ -6,7 +6,7 @@
     <TabbedPage.ToolbarItems>
         <ToolbarItem Text="Add"
                      IconImageSource="add.png"
-                     Clicked="AddItem_Clicked"/>
+                     Command="{Binding NavigationCommand}"/> 
     </TabbedPage.ToolbarItems>
     <local:HistoryPage Title="History"
                        IconImageSource="home.png"/>
