--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:TravelRecord.ViewModel.Converters"
              x:Class="TravelRecord.HistoryPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:DateTimeToStringConverter x:Key="converter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ListView x:Name="postListView" ItemSelected="OnItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextCell Text="{Binding Experience}" />
+                <TextCell Text="{Binding Experience}"
+                          Detail="{Binding CreatedAt, Converter={StaticResource converter}}"/>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
