rosas/travel: Use observable collections and layout compression

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
@@ -8,7 +8,10 @@
             <converters:DateTimeToStringConverter x:Key="converter"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <ListView x:Name="postListView" ItemSelected="OnItemSelected">
+    <ListView
+        x:Name="postListView"
+        ItemSelected="OnItemSelected"
+        ItemsSource="{Binding Posts}">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <TextCell Text="{Binding Experience}"
