--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/MainPage.xaml
@@ -4,6 +4,7 @@
              x:Class="TravelRecord.MainPage">
     <StackLayout
         VerticalOptions="Center"
+        CompressedLayout.IsHeadless="True"
         Margin="20, 0">
         <Image x:Name="iconImage"
                Aspect="AspectFit"
