rosas/travel: Add swipe context actions and pull to refresh

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/HistoryPage.xaml
@@ -11,11 +11,20 @@
     <ListView
         x:Name="postListView"
         ItemSelected="OnItemSelected"
-        ItemsSource="{Binding Posts}">
+        ItemsSource="{Binding Posts}"
+        IsPullToRefreshEnabled="True"
+        Refreshing="postListView_Refreshing">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <TextCell Text="{Binding Experience}"
-                          Detail="{Binding CreatedAt, Converter={StaticResource converter}}"/>
+                          Detail="{Binding CreatedAt, Converter={StaticResource converter}}">
+                    <TextCell.ContextActions>
+                        <MenuItem Text="Delete"
+                                  Clicked="Delete_Clicked"
+                                  CommandParameter="{Binding}"
+                                  IsDestructive="True"/>
+                    </TextCell.ContextActions>
+                </TextCell>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
