--- a/cummings-net-angular/DatingApp/client/src/app/home/home.component.html
+++ b/cummings-net-angular/DatingApp/client/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     <div class="container" *ngIf="registerMode">
         <div class="row justify-content-center">
             <div class="col-4">
-                <p>Register form goes here</p>
+                <app-register (cancelRegister)="cancelRegister($event)"></app-register>
             </div>
         </div>
     </div>
