--- a/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/Views/CoffeeEquipmentPage.xaml
+++ b/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/Views/CoffeeEquipmentPage.xaml
@@ -3,13 +3,19 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="BrushUpXamarin.Views.CoffeeEquipmentPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label
-                HorizontalOptions="CenterAndExpand"
-                Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand"
-			/>
-        </StackLayout>
-    </ContentPage.Content>
+    <Grid RowDefinitions="*,Auto,Auto,*">
+        <Label
+            x:Name="LabelCount"
+            Grid.Row="1"
+			HorizontalOptions="Center"
+            FontSize="Large"
+			Text="Click the button below!"
+		/>
+        <Button
+            x:Name="ButtonClick"
+            Clicked="ButtonClick_Clicked"
+            Grid.Row="2"
+	        Text="Click Me"
+		/>
+    </Grid>
 </ContentPage>
