--- a/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/Views/CoffeeEquipmentPage.xaml
+++ b/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/Views/CoffeeEquipmentPage.xaml
@@ -3,20 +3,21 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="BrushUpXamarin.Views.CoffeeEquipmentPage"
-    xmlns:local="clr-namespace:BrushUpXamarin.Views"
-    x:DataType="local:CoffeeEquipmentPage"
-    BindingContext="{Binding Source={RelativeSource Self}}">
+    xmlns:viewModels="clr-namespace:BrushUpXamarin.ViewModels"
+    x:DataType="viewModels:CoffeeEquipmentViewModel">
+    <ContentPage.BindingContext>
+        <viewModels:CoffeeEquipmentViewModel />
+    </ContentPage.BindingContext>
+
     <Grid RowDefinitions="*,Auto,Auto,*">
         <Label
-            x:Name="LabelCount"
             Grid.Row="1"
 			HorizontalOptions="Center"
             FontSize="Large"
 			Text="{Binding CountDisplay}"
 		/>
         <Button
-            x:Name="ButtonClick"
-            Clicked="ButtonClick_Clicked"
+            Command="{Binding IncreaseCount}"
             Grid.Row="2"
 	        Text="Click Me"
 		/>
